--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <meta http-equiv="Cache-control" content="public">
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
+    <meta name="viewport" content="width=device-width, initial-scale = 0.86, maximum-scale=3.0, minimum-scale=0.86">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <link
       rel="icon"
       type="image/png"
